@@ -1,0 +1,7 @@
+#ifndef __FE_XMPP_QUERIES_H
+#define __FE_XMPP_QUERIES_H
+
+void fe_xmpp_queries_init(void);
+void fe_xmpp_queries_deinit(void);
+
+#endif
